[gd_scene load_steps=2 format=3 uid="uid://dwwwo8cei14e"]

[ext_resource type="Script" path="res://scripts/trading/TradingUI.gd" id="1_rrke4"]

[node name="TradingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_rrke4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="PlayerInventory" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 0.45
anchor_bottom = 0.8
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0

[node name="Label" type="Label" parent="Panel/PlayerInventory"]
layout_mode = 2
text = "Player Inventory"

[node name="ItemList" type="ItemList" parent="Panel/PlayerInventory"]
layout_mode = 2

[node name="ShopInventory" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_left = 0.55
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0

[node name="Label" type="Label" parent="Panel/ShopInventory"]
layout_mode = 2
text = "Shop"

[node name="ItemList" type="ItemList" parent="Panel/ShopInventory"]
layout_mode = 2

[node name="CurrencyLabel" type="Label" parent="Panel"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -68.64
offset_right = -52.96
offset_bottom = -488.4
text = "Credits: 0"

[node name="BuyButton" type="Button" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 750.0
offset_top = 460.0
offset_right = -71.5999
offset_bottom = -27.4
text = "Buy"

[node name="SellButton" type="Button" parent="Panel"]
layout_mode = 0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 460.0
offset_right = 150.0
offset_bottom = -27.4
text = "Sell"
